<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!--<item
        android:id="@+id/action_location"
        android:icon="@mipmap/icon_location"
        android:orderInCategory="100"
        android:title="@string/action_location"
        app:showAsAction="always" />-->

    <item
        android:id="@+id/action_calculate"
        android:orderInCategory="100"
        android:title="@string/action_calculate"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_form"
        android:orderInCategory="100"
        android:title="@string/action_form"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />

</menu>
