<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f7fafa"
    android:paddingBottom="@dimen/fab_margin"
    android:paddingTop="@dimen/fab_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">


    <ImageView
        android:id="@+id/about_logo"
        android:layout_width="144dp"
        android:layout_height="144dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/icon_logo" />

    <TextView
        android:id="@+id/about"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/about_logo"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="80dp"
        android:layout_marginRight="80dp"
        android:gravity="center"
        android:text="@string/about"
        android:textColor="@color/gray" />

    <View
        android:id="@+id/line1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/about"
        android:layout_marginTop="70dp"
        android:background="#ecefee" />

    <RelativeLayout
        android:id="@+id/about_check"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_below="@+id/line1"
        android:background="?android:attr/selectableItemBackground">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/fab_margin"
            android:text="@string/about_check"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/about_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/fab_margin"
            android:text="v1.0.0"
            android:textSize="16sp" />
    </RelativeLayout>

    <View
        android:id="@+id/line_feedback"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/about_check"
        android:background="#ecefee" />

    <RelativeLayout
        android:id="@+id/about_feedback"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_below="@+id/line_feedback"
        android:background="?android:attr/selectableItemBackground">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/fab_margin"
            android:text="@string/about_feedback"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/fab_margin"
            android:scaleType="fitXY"
            android:src="@drawable/setting_arrow" />
    </RelativeLayout>

    <View
        android:id="@+id/line2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/about_feedback"
        android:background="#ecefee" />

    <RelativeLayout
        android:id="@+id/about_group"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_below="@+id/line2"
        android:background="?android:attr/selectableItemBackground">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/fab_margin"
            android:text="@string/about_qgroup"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/fab_margin"
            android:text="@string/about_group"
            android:textSize="16sp" />
    </RelativeLayout>

    <View
        android:id="@+id/line3"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/about_group"
        android:background="#ecefee" />

    <RelativeLayout
        android:id="@+id/about_author"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_below="@+id/line3"
        android:background="?android:attr/selectableItemBackground">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/fab_margin"
            android:text="@string/about_author"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/fab_margin"
            android:text="@string/about_author_name"
            android:textSize="16sp" />
    </RelativeLayout>

    <View
        android:id="@+id/line4"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/about_author"
        android:background="#ecefee" />

</RelativeLayout>