<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/fab_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/type"
            android:layout_width="0.0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:hint="@string/hint_type">

            <EditText
                android:id="@+id/form_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:text="全部"
                android:textSize="16.0sp" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/start"
            android:layout_width="0.0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:hint="@string/hint_start">

            <EditText
                android:id="@+id/date_start"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:text="请选择"
                android:textSize="16.0sp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/end"
            android:layout_width="0.0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:hint="@string/hint_end">

            <EditText
                android:id="@+id/date_end"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:text="请选择"
                android:textSize="16.0sp" />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/layout"
        android:layout_alignTop="@+id/layout">

        <View
            android:id="@+id/view_type"
            android:layout_width="0.0dip"
            android:layout_height="match_parent"
            android:layout_weight="1.0" />

        <View
            android:id="@+id/view_start"
            android:layout_width="0.0dip"
            android:layout_height="match_parent"
            android:layout_weight="1.0" />

        <View
            android:id="@+id/view_end"
            android:layout_width="0.0dip"
            android:layout_height="match_parent"
            android:layout_weight="1.0" />
    </LinearLayout>


    <com.github.mikephil.charting.charts.BarChart
        android:id="@+id/chart_bar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/layout" />

    <TextView
        android:id="@+id/empty_tv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="查询不到记录"
        android:textSize="20.0sp"
        android:visibility="gone" />

</RelativeLayout>